--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -15,7 +15,7 @@
 			<strong>{{ boldmessage }}</strong><br />
 		</div>
 		<div>
-			<h2> Most Liked Categories </h2>
+			<h2>Most Liked Categories</h2>
 		</div>
 		<div>
 		{% if categories %}
@@ -33,11 +33,11 @@
 
 
 		<div>
-			<h2> Most Viewed Pages </h2>
+			<h2>Most Viewed Pages</h2>
 		</div>
 		<div>
-		{% if category %}
-			<h1>{{ category.name }}</h1>
+		{% if views %}
+			<h1>{{ views.page }}</h1>
 			{% if pages %}
 			<ul>
 				{% for page in pages %}
