--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -36,7 +36,7 @@
 			<h2>Most Viewed Pages</h2>
 		</div>
 		<div>
-		{% if views %}
+		{% if pages %}
 			<h1>{{ views.page }}</h1>
 			{% if pages %}
 			<ul>
