--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 
+
 <html>
 
 	<head>
@@ -22,6 +23,10 @@
 		{% else %}
 			The specified category does not exist.
 		{% endif %}
+		</div>
+
+		<div>
+			<a href="">Index</a><br />
 		</div>
 	</body>
 
