--- a/templates/rango/category.html
+++ b/templates/rango/category.html
@@ -25,9 +25,22 @@
 		{% endif %}
 		</div>
 
+<div>
+		{% if category %}
+			<ul>
+				{% for category in categories %}
+				<a href="/rango/category/{{category.slug }}/add_page/">Add Page</a> <br/>
+				{% endfor %}
+			</ul>
+		{% else %}
+			The specified category does not exist.
+		{% endif %}
+		</div>
+
 		<div>
-			<a href="">Index</a><br />
+			<a href="/">Index</a><br />
 		</div>
 	</body>
 
 </html>
+
