--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -56,6 +56,7 @@
 			<a href="/rango/about/">About</a><br />
 			<img src="{% static 'images/rango.jpg'%}"
 			alt="Picture of Rango" />
+			<a href="/rango/add_category/">Add a New Category</a><br />
 		</div>
 	</body>
 
