--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
-<html>
-	<head>
-		<title>Rango</title>
-	</head>
-	<body>
+
+{% block title_block %}
+	About
+{% endblock %}
+
+{% block body_block %}
 		<h1>Rango says...</h1>
 		here is the about page.
 		<div>
@@ -23,5 +24,4 @@
 			<img src="{% static 'images/cat.jpg'%}"
 			alt="Picture of Rango" />
 		</div>
-	</body>
-</html>
+{% block body_block %}
