--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -1,11 +1,15 @@
-<!DOCTYPE html>
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
-<html>
-	<head>
-		<title>Rango</title>
-	</head>
 
-	<body>
+{% block title_block %}
+	{% if category %}
+		{{ category.name }}
+	{% else %}
+		Unknown Category
+	{% endif %}
+{% endblock %}
+
+{% block body_block %}
 		<h1>Add a Category</h1>
 		<div>
 			<form id="category_form" method="post" action="/rango/add_category/">
@@ -21,5 +25,4 @@
 				<input type="submit" name="submit" value="Create Category" />
 			</form>
 		</div>
-	</body>
-</html>
+{% block body_block %}
