--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
-
+{% extends 'rango/base.html' %}
 {% load staticfiles %}
 
-<html>
+{% block title_block %}
+	Homepage
+{% endblock %}
 
-	<head>
-		<title>Rango</title>
-	</head>
-
-	<body>
+{% block body_block %}
 		<h1>Rango says...</h1>
 		<div>
 			hey there partner! <br />
@@ -22,7 +19,7 @@
 			<ul>
 				{% for category in categories %}
 					<li>
-						<a href="/rango/category/{{ category.slug }}/">{{ category.name}}</a>
+						<a href="{% url 'rango:show_category' category.slug %}">{{ category.name}}</a>
 					</li>
 				{% endfor%}
 			</ul>
@@ -52,12 +49,4 @@
 		{% endif %}
 		</div>
 
-		<div>
-			<a href="/rango/about/">About</a><br />
-			<img src="{% static 'images/rango.jpg'%}"
-			alt="Picture of Rango" />
-			<a href="/rango/add_category/">Add a New Category</a><br />
-		</div>
-	</body>
-
-</html>
+{% endblock %}
